<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/sport_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/sport_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <RadioButton
            android:id="@+id/matching_sports_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matching_sports" />

        <RadioButton
            android:id="@+id/all_sports_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_sports" />

        <RadioButton
            android:id="@+id/custom_sports_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_sports" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/custom_sport_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/custom_sport_hint"
            android:visibility="gone"/>

        <Button
            android:id="@+id/save_custom_sport_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_save_button"
            android:visibility="gone"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/saved_custom_sports_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/saved_custom_sport_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/gender_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/men_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men" />

        <RadioButton
            android:id="@+id/women_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/women" />

        <RadioButton
            android:id="@+id/both_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both" />
    </RadioGroup>

    <TextView
        android:id="@+id/age_range_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age_range"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <SeekBar
        android:id="@+id/min_age_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:thumb="@drawable/seekbar_thumb"
        android:progressDrawable="@drawable/seekbar_progress"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />

    <SeekBar
        android:id="@+id/max_age_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/min_age_seekbar"
        android:layout_marginTop="16dp"
        android:thumb="@drawable/seekbar_thumb"
        android:progressDrawable="@drawable/seekbar_progress"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />
    <TextView
        android:id="@+id/distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_range"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/distance_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_label" />



</LinearLayout>

