<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:elevation="12dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="75dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="center"
                        android:src="@drawable/profilepicture" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="center"
                    android:text="Anna, 22"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/profile_location"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:background="#FFFFFF"
                android:text="@string/profile_biography"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/plain_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="#A1B4CBF0"
                android:backgroundTint="#B4CBF0"
                android:inputType="textMultiLine|text"
                android:minHeight="48dp"
                android:text="@string/profile_biotext"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:text="@string/profile_aboutme"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/_71454_link_icon" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/looking"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/longterm"
                    android:textAlignment="textEnd"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="26dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/location_icon_png_4221" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/location"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="197dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/distance"
                    android:textAlignment="textEnd"
                    android:textSize="19sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:text="@string/profile_yourpictures"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="10dp"
                    android:id="@+id/imageView4"
                    android:layout_width="122dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:src="@drawable/padel" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="168dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/bouldering" />

                <ImageView
                    android:layout_marginEnd="10dp"
                    android:id="@+id/imageView6"
                    android:layout_width="127dp"
                    android:layout_height="114dp"
                    android:layout_weight="0"
                    android:src="@drawable/run" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/imageView7"
                    android:layout_width="122dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:src="@drawable/kayak" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="127dp"
                    android:layout_height="114dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/yoga" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="127dp"
                    android:layout_height="114dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    app:backgroundTint="#B4CBF0"
                    app:cornerRadius="57dp"
                    android:textSize="30sp"
                    android:text="+" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:text="@string/profile_yourinterests"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="#B4CBF0"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="10dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:src="@drawable/tennis_racket" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/profile_padel"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="#B4CBF0"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="73dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:src="@drawable/kayakicon" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/profile_kayak"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="#B4CBF0"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="10dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:src="@drawable/gymicon" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/profile_gym"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="#B4CBF0"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="73dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:src="@drawable/runicon" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/profile_run"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="30sp"
                android:textAlignment="center"
                android:background="#B4CBF0"
                android:text="+" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:text="@string/profile_achievements"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/plain_text_input1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="#A1B4CBF0"
                android:backgroundTint="#B4CBF0"
                android:inputType="textMultiLine|text"
                android:minHeight="48dp"
                android:text="@string/profile_achitext"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>